--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Pesto Pasta Recipe</title>
 </head>
 <body>
-  <h1>Pesto Pasta</h1>
+  <h1>Odin Recipes</h1>
   <a href="recipes/pesto-pasta.html">Pesto Pasta</a>
 </body>
 </html>
