Add styling to the index page and recipe pages

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Recipes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Odin Recipes</h1>
-  <ul>
+  <h1 class="title">Odin Recipes</h1>
+  <ul class="recipe-list">
     <li><a href="recipes/pesto-pasta.html">Pesto Pasta</a></li>
     <li><a href="recipes/tiramisu.html">Tiramisu</a></li>
     <li><a href="recipes/churros.html">Churros</a></li>
