--- a/recipes/churros.html
+++ b/recipes/churros.html
@@ -5,13 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Churros Recipe</title>
+  <link rel="stylesheet" href="../style/churros.css">
 </head>
 <body>
-  <h1>Churros</h1>
+  <h1 class="title">Churros</h1>
   <img src="../images/churros.webp" alt="A few churros in a glass.">
-  <h2>Description</h2>
+  <h2 class="subtitle">Description</h2>
   <p>A churro is a cinnamon- and sugar-topped fried pastry dough stick with Spanish and Portuguese origins. Churros are similar to doughnuts, but they have ridges because they are piped out of a pastry bag. Because they are fried instead of baked, churros have a fluffy and tender interior with a satisfyingly crispy exterior.</p>
-  <h2>Ingredients</h2>
+  <h2 class="subtitle">Ingredients</h2>
   <ul>
     <li>1 cup water</li>
     <li>2 ½ tablespoons white sugar</li>
@@ -22,7 +23,7 @@
     <li>½ cup white sugar, or to taste</li>
     <li>1 teaspoon ground cinnamon</li>
   </ul>
-  <h2>Steps</h2>
+  <h2 class="subtitle">Steps</h2>
   <ol>
     <li>Combine water, 2 1/2 tablespoons sugar, salt, and 2 tablespoons vegetable oil in a small saucepan and place over medium heat. Bring to a boil and remove from the heat. Stir in flour, stirring until mixture forms a ball.</li>
     <li>Heat oil for frying in a deep fryer or deep pot to 375 degrees F (190 degrees C).</li>
