--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -5,13 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tiramisu Recipe</title>
+  <link rel="stylesheet" href="../style/tiramisu.css">
 </head>
 <body>
-  <h1>Tiramisu</h1>
+  <h1 class="title">Tiramisu</h1>
   <img src="../images/tiramisu.webp" alt="A piece of tiramisu on a white dish.">
-  <h2>Description</h2>
+  <h2 class="subtitle">Description</h2>
   <p>Classic tiramisu, with its irresistible coffee flavor and lightly sweetened mascarpone, will never go out of style. This tiramisu recipe is a no-bake dessert that's sure to impress even the pickiest of eaters.</p>
-  <h2>Ingredients</h2>
+  <h2 class="subtitle">Ingredients</h2>
   <ul>
     <li>6 large egg yolks</li>
     <li>¾ cup white sugar</li>
@@ -24,7 +25,7 @@
     <li>2 (3 ounce) packages ladyfinger cookies</li>
     <li>1 tablespoon unsweetened cocoa powder</li>
   </ul>
-  <h2>Steps</h2>
+  <h2 class="subtitle">Steps</h2>
   <ol>
     <li>Whisk together egg yolks and sugar in a medium saucepan until well blended.</li>
     <li>Whisk in milk and cook over medium heat, stirring constantly, until mixture comes to a boil.</li>
