--- a/recipes/pesto-pasta.html
+++ b/recipes/pesto-pasta.html
@@ -5,13 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pesto Pasta Recipe</title>
+  <link rel="stylesheet" href="../style/pesto-pasta.css">
 </head>
 <body>
-  <h1>Pesto Pasta</h1>
+  <h1 class="title">Pesto Pasta</h1>
   <img src="../images/pesto-pasta.webp" alt="A dish of pesto pasta with grated Parmesan cheese on top.">
-  <h2>Description</h2>
+  <h2 class="subtitle">Description</h2>
   <p>Pesto pasta is easy to make and full of flavor. It tastes good hot or cold!</p>
-  <h2>Ingredients</h2>
+  <h2 class="subtitle">Ingredients</h2>
   <ul>
     <li>1 (16 ounce) package pasta</li>
     <li>2 tablespoons olive oil</li>
@@ -21,7 +22,7 @@
     <li>ground black pepper to taste</li>
     <li>2 tablespoons grated Parmesan cheese</li>
   </ul>
-  <h2>Steps</h2>
+  <h2 class="subtitle">Steps</h2>
   <ol>
     <li>Fill a large pot with lightly salted water and bring to a rolling boil. Stir in pasta and return to a boil. Cook pasta uncovered, stirring occasionally, until tender yet firm to the bite, about 8 to 10 minutes. Drain and transfer into a large bowl.</li>
     <li>Meanwhile, heat oil in a frying pan over medium-low heat. Add onion; cook and stir until softened, about 3 minutes. Stir in pesto, salt, and pepper until warmed through.</li>
